--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -16,10 +16,16 @@ jobs:
     - name: Checkout code
       uses: actions/checkout@v2
 
-    - name: Publish VSCode extension
-      uses: actions/npm@v1
+    - name: Set up Node.js
+      uses: actions/setup-node@v2
       with:
-        args: publish
+        node-version: 14
+
+    - name: Publish VSCode extension
+      run: |
+        npm login --registry=https://marketplace.visualstudio.com --scope=@yauhenyavorski
+        echo "//marketplace.visualstudio.com/:_authToken=$VSCODE_EXT_PUBLISH_TOKEN" > .npmrc
+        npm publish
       env:
         NODE_AUTH_TOKEN: ${{ env.VSCODE_EXT_PUBLISH_TOKEN }}
 
